<resources>
    <string name="app_name">AuthApp</string>

    <string name="welcome_title">Welcome</string>
    <string name="auth_subtitle">Please sign in or create an account</string>
    <string name="tab_sign_in">Sign In</string>
    <string name="tab_sign_up">Sign Up</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>

    <string name="btn_login">Login</string>
    <string name="btn_create_account">Create Account</string>
    <string name="terms_footer">By signing up, you agree to our Terms of Service and Privacy Policy.</string>
</resources>